[gd_scene load_steps=12 format=2]

[ext_resource path="res://JamTimer.gd" type="Script" id=1]
[ext_resource path="res://fonts/Silkscreen-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://textures/pause.png" type="Texture" id=3]
[ext_resource path="res://textures/right.png" type="Texture" id=4]
[ext_resource path="res://textures/stop.png" type="Texture" id=5]
[ext_resource path="res://textures/audioOn.png" type="Texture" id=6]
[ext_resource path="res://textures/audioOff.png" type="Texture" id=7]
[ext_resource path="res://textures/minus.png" type="Texture" id=8]
[ext_resource path="res://textures/plus.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="TriJamTimer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_right = 40.0
margin_bottom = 40.0

[node name="TimerLabel" type="Label" parent="HBoxContainer"]
margin_top = 7.0
margin_right = 192.0
margin_bottom = 33.0
text = "00:00:00.000"

[node name="Controls" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 196.0
margin_right = 496.0
margin_bottom = 40.0
hint_tooltip = "Right Click to hide/show."
custom_constants/separation = 0

[node name="StartPause" type="TextureButton" parent="HBoxContainer/Controls"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Mute" type="TextureButton" parent="HBoxContainer/Controls"]
margin_left = 40.0
margin_right = 80.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="Spacer" type="Control" parent="HBoxContainer/Controls"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )

[node name="MinusTime" type="TextureButton" parent="HBoxContainer/Controls"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 8 )
expand = true

[node name="Spacer3" type="Control" parent="HBoxContainer/Controls"]
margin_left = 160.0
margin_right = 180.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 0 )

[node name="PlusTime" type="TextureButton" parent="HBoxContainer/Controls"]
margin_left = 180.0
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 9 )
expand = true

[node name="Spacer2" type="Control" parent="HBoxContainer/Controls"]
margin_left = 220.0
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )

[node name="Stop" type="TextureButton" parent="HBoxContainer/Controls"]
margin_left = 260.0
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 5 )
expand = true

[node name="SelectSFX" type="AudioStreamPlayer" parent="."]

[node name="TimeoutAlarm" type="AudioStreamPlayer" parent="."]
bus = "Alarm"

[connection signal="gui_input" from="HBoxContainer/Controls" to="." method="_on_Controls_gui_input"]
[connection signal="toggled" from="HBoxContainer/Controls/StartPause" to="." method="_on_StartPause_toggled"]
[connection signal="pressed" from="HBoxContainer/Controls/Mute" to="." method="_on_Mute_pressed"]
[connection signal="toggled" from="HBoxContainer/Controls/Mute" to="." method="_on_Mute_toggled"]
[connection signal="pressed" from="HBoxContainer/Controls/MinusTime" to="." method="_on_MinusTime_pressed"]
[connection signal="pressed" from="HBoxContainer/Controls/PlusTime" to="." method="_on_PlusTime_pressed"]
[connection signal="pressed" from="HBoxContainer/Controls/Stop" to="." method="_on_Stop_pressed"]
[connection signal="finished" from="TimeoutAlarm" to="." method="_on_TimeoutAlarm_finished"]
